package 创建型模式.简单工厂模式.demo;

public interface Chart {
    public void display();
}
