package 创建型模式.简单工厂模式.demo;

public class HistogramChart implements Chart{
    public HistogramChart() {
    }

    @Override
    public void display() {

    }
}
