package 创建型模式.简单工厂模式.demo;

public class LineChart implements Chart{
    public LineChart() {}
    @Override
    public void display(){

    }
}
