package 创建型模式.简单工厂模式.demo;

public class PieChart implements Chart{
    public PieChart() {
    }

    @Override
    public void display() {

    }
}
